--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,7 @@ main{
     text-decoration: none;
     border-radius: 5px;
     padding: 5px 15px 5px 15px;
+    margin: 10px;
 }
 .btn:hover{
    background-color: var(--tertiary);
